--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,28 +1,80 @@
 .navbar-conteiner {
-  background: red;
   width: 100%;
   height: 80px;
+  display: flex;
 }
+
+.cart-curenncy-conteiner {
+  align-items: center;
+  margin-left: 70%;
+  gap: 20px;
+  display: flex;
+  flex: 1;
+
+}
+
+.cart-curenncy-conteiner button {
+  width: 20px;
+  height: 20px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  background: url('../../../public/cart-shopping-solid.svg')
+}
+
+.cart {
+    position: relative;
+    width: 30px;
+    
+}
+.cart-curenncy-conteiner label {
+  position: absolute;
+  cursor: pointer;
+  right: 5%;
+  top: -20%;
+  line-height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 12px;
+  color: white;
+  font-weight: bold;
+  background-color: black;
+  border: 2px solid black;
+  }
+.cart-curenncy-conteiner select {
+  width: 30px;
+  height: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  box-shadow: none;
+}
+
+
 .categories-conteiner {
   display: flex;
-  justify-content: space-between;
-  width: 25%;
+  flex: 2;
+  gap: 30px;
+  width: 10%;
   height: 100%;
 
-  margin-left: 40px;
+  margin-left: 70px;
 }
 .categories-conteiner button {
   font-size: 20px;
   background: none;
   border: none;
+  text-transform: capitalize;
+  cursor: pointer;
 }
 
 .categories-conteiner button:hover {
-  color: rgb(65, 230, 32);
-  border-bottom: 3px solid rgb(65, 230, 32);
+  color: #5ece7b;
+  border-bottom: 3px solid #5ece7b;
 }
 
 .active {
-  color: rgb(65, 230, 32);
-  border-bottom: 3px solid rgb(65, 230, 32) !important;
+  color: #5ece7b;
+  border-bottom: 3px solid #5ece7b !important;
 }
