--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,8 @@
 .navbar-conteiner {
   width: 100%;
   height: 80px;
+
+  
   display: flex;
 }
 
@@ -58,10 +60,11 @@
   display: flex;
   flex: 2;
   gap: 30px;
-  width: 10%;
+  width: fit-content;
   height: 100%;
-
-  margin-left: 70px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  margin-left: 100px;
 }
 .categories-conteiner .btn-navbar {
   margin-top: 25px;
